--- a/css/style.css
+++ b/css/style.css
@@ -297,9 +297,9 @@ body {
   background: rgb(255, 255, 39);
   position: absolute;
   height: 50px;
-  width: 600px;
   top: calc(50% - 25px);
-  left: calc(50% - 300px);
+  left: 0;
+  right: 0;
   text-align: center;
 }
 
