--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ body {
 
 }
 
-.abs {
+.abs{
   background: rgb(255, 255, 39);
   position: absolute;
   height: 50px;
@@ -345,7 +345,7 @@ ul li ul li{
   background: yellow;
 }
 
-.abs{
+.abs_0{
   position: absolute;
   top: 100%;
   left: 0;
